--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,13 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
-html {
+html,body {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
-
+.font-iranyekan {
+  font-family: 'IRANYekan', sans-serif;
+}
 
 @theme inline {
   --radius-sm: calc(var(--radzius) - 4px);
@@ -122,4 +124,12 @@ html {
   body {
     @apply bg-background text-foreground;
   }
+}
+@font-face {
+  font-family: 'IRANYekan';
+  src: url('/font/IRANYekanXFaNum-DemiBold.woff2') format('woff2'),
+       url('/font/IRANYekanXFaNum-DemiBold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
